# Modern-CMake-for-Cpp

examples/chapter01/03-script/: 如何使用脚本.txt
examples/chapter02/07-loops/: foreach.cmake  zip.cmake
examples/chapter02/10-useful/: message_context.cmake
examples/chapter03/02-include/: CMakeLists.txt
examples/chapter03/03-add_subdirectory/cars/: CMakeLists.txt
examples/chapter03/04-subprojects/cars/: CMakeLists.txt
examples/chapter03/05-1-ENV/: HostInfo.cmake  OperateSystem.cmake
examples/chapter03/06-toolchain/: CMakeLists.txt
examples/chapter03/07-features/: CMakeLists.txt
examples/chapter03/08-test_run/: CMakeLists.txt
examples/chapter03/09-in-source/: CMakeLists.txt
examples/chapter04/01-targets/: CMakeLists.txt  test.dot  test.dot.calculations.dependers  test.dot.drawing.dependers  test.dot.gui_app  test.dot.terminal_app
examples/chapter04/02-propagated/: CMakeLists.txt
examples/chapter04/03-command/: CMakeLists.txt
examples/chapter04/04-command/: CMakeLists.txt
examples/chapter04/05-genex/: CMakeLists.txt
examples/chapter05/01-sources/: CMakeLists.txt
examples/chapter05/02-definitions/: CMakeLists.txt
examples/chapter05/03-git/: CMakeLists.txt
examples/chapter05/04-configure/: CMakeLists.txt
examples/chapter05/05-optimize/: CMakeLists.txt
examples/chapter05/06-precompile/: CMakeLists.txt
examples/chapter05/07-debug/: CMakeLists.txt
examples/chapter06/01-libraries/: CMakeLists.txt
examples/chapter06/02-odr-fail/: CMakeLists.txt
examples/chapter06/05-dynamic/: CMakeLists.txt
examples/chapter06/06-unresolved/: CMakeLists.txt
examples/chapter07/01-find-package-variables/: CMakeLists.txt
examples/chapter07/02-find-package-targets/: CMakeLists.txt
examples/chapter07/03-find-pkg-config/: CMakeLists.txt
examples/chapter07/04-find-package-custom/: CMakeLists.txt
examples/chapter07/05-git-submodule-manual/: CMakeLists.txt
examples/chapter07/06-git-submodule-auto/: CMakeLists.txt
examples/chapter07/07-git-clone/: CMakeLists.txt
examples/chapter07/08-external-project-git/: CMakeLists.txt
examples/chapter07/09-fetch-content/: CMakeLists.txt
examples/chapter08/03-catch2/test/: CMakeLists.txt
examples/chapter10/01-doxygen/: CMakeLists.txt
examples/chapter10/01-doxygen/cmake/: Doxygen.cmake
examples/chapter10/02-doxygen-nice/cmake/: Doxygen.cmake
